# LinuxApplicationDevelopment2023

02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script  test
05_Regexps/: Makefile  esub.c
08_I18n/: Makefile.am  configure.ac  guesser.c  ru.po
09_PatchDiff/: Makefile  maze.c  random-text-size.patch  size.patch  text-size.patch
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h
10_Testing/tests/: my.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  eo.po  guesser.c  guesser.pot  ru.po
